tests/spec/emit/snapshots/tuple_let_from_lisette_function_avoids_package_names.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:fmt"
  
  fn bounds() -> (int, int) {
    (1, 10)
  }
  
  fn low() -> int { 0 }
  
  fn main() {
    let (low, high) = bounds()
    fmt.Println(low, high)
  }
---
package main

import "fmt"

func bounds() (int, int) {
	return 1, 10
}

func low() int {
	return 0
}

func main() {
	low, high := bounds()
	fmt.Println(low, high)
}
