tests/spec/emit/snapshots/tuple_let_with_wildcard_element_from_lisette_function.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:fmt"
  
  fn pair(flag: bool) -> (string, bool) {
    if flag { ("yes", true) } else { ("no", false) }
  }
  
  fn main() {
    let (_, only_flag) = pair(false)
    fmt.Println(only_flag)
  }
---
package main

import "fmt"

func pair(flag bool) (string, bool) {
	if flag {
		return "yes", true
	}
	return "no", false
}

func main() {
	_, only_flag := pair(false)
	fmt.Println(only_flag)
}
