tests/spec/emit/snapshots/tuple_local_from_a_nested_tuple_reads_the_inner_element.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:fmt"
  
  fn nested(n: int) -> ((int, int), int) {
    ((n, n), n)
  }
  
  fn main() {
    let p = nested(3)
    fmt.Println(p.0.0 + p.1)
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func nested(n int) (lisette.Tuple2[int, int], int) {
	return lisette.MakeTuple2[int, int](n, n), n
}

func main() {
	p0, p1 := nested(3)
	fmt.Println(p0.First + p1)
}
